# fallout3-access

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: Fallout3Access.ini
include/f3a/: audio_beacon.h  config.h  console.h  engine_hooks.h  f3a_prefix.h  fose_runtime.h  game_access.h  hotkeys.h  logger.h  menu_dispatch.h  modules.h  navmesh.h  plugin.h  polling_loop.h  strings.h  tolk_bridge.h
scripts/: build.ps1
src/: audio_beacon.cpp  config.cpp  console.cpp  engine_hooks.cpp  game_access.cpp  hotkeys.cpp  logger.cpp  menu_dispatch.cpp  navmesh.cpp  plugin_main.cpp  polling_loop.cpp  strings_pl.cpp  tolk_bridge.cpp
src/modules/: autowalk.cpp  barter.cpp  container.cpp  dialog.cpp  guide.cpp  lockpick.cpp  message.cpp  modules_init.cpp  nav_assist.cpp  pipboy.cpp  vats.cpp  world_scan.cpp
tools/: disasm_activate.py  find_activate.py  find_cmd.py  find_mainloop.py
